# AoC

./: Cargo.toml
aoc-2019/: Cargo.toml
aoc-2019/src/: lib.rs
aoc-2019/src/int_code/: mod.rs
aoc-2020/: .gitignore  Cargo.toml
aoc-2020/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day21.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
aoc-2021/: Cargo.toml  run_all.sh
aoc-2021/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day19.rs  day2.rs  day20.rs  day21.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
aoc-2022/: Cargo.toml
aoc-2022/rust/: Cargo.toml
aoc-2022/rust/src/: day1.rs  day10.rs  day11.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
aoc-2023/: .gitignore  Cargo.toml
aoc-2023/src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
aoc-2024/: .gitignore  Cargo.toml
aoc-2024-py/aoc/: day1.py
aoc-2024/src/: day1.rs
aoc-2025/: .gitignore  Cargo.toml
aoc-2025/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/: day1.rs  day3.rs  day4.rs  day5.rs  lib.rs
src/int_code/: machine.rs  mod.rs  monitor.rs
src/permutation/: mod.rs
